# CS484

./: .gitignore
18Fall/cs484_cv/hw2/: hpimage.fig
18Fall/cs688_retrieval/hw1/: README.md
18Fall/cs688_retrieval/hw2/: data_loader.py  feature_extractor.py  requirements.txt
18Fall/ee534_pattern_recognition/PA1/: classify.m  report.docx
18Fall/ee534_pattern_recognition/PA2/: OCR_letter.m  extract_letter_save.m  main.m  report.docx  template.mat
cs484_cv/HW1/: 2018_Fall_MATLAB_Tutorial.aux  2018_Fall_MATLAB_Tutorial.tex
cs484_cv/hw1/: 2018_Fall_Homework1_Questions.tex  2018_Fall_MATLAB_Tutorial.out  hw1_1_2.m
cs484_cv/hw11/: 2018_Fall_Homework1_Questions.aux  hw1_1_1.m
cs484_cv/hw2/: createSubmissionZIP.m  lpimage.fig
cs688_retrieval/hw1/: data_loader.py  feature_extractor.py  report.docx  search.py
cs688_retrieval/hw2/: README.md  pq_search.py  report.docx  search.py
cs688_retrieval/hw2/Spherical_Hashing_CMake_Projects/: CMakeLists.txt
cs688_retrieval/hw2/Spherical_Hashing_CMake_Projects/Spherical_Hashing/: CMakeLists.txt  Common.cpp  Common.h  Kernel.cpp  Kernel_SphericalHashing.h  Points.h  SphericalHashing.h
cs688_retrieval/hw2/Spherical_Hashing_CMake_Projects/Tester_L2/: CMakeLists.txt  Tester_L2_Main.cpp
ee534_pattern_recognition/PA1/: classify.m  classify_k.m  report.docx  test.m
ee534_pattern_recognition/PA2/: OCR.m  create_template_user.m  cross_corr.m
ee838_video/: README.md  data_loader.py  model.py  ops.py  report.docx  requirements.txt  training.py  ~$report.docx  ~WRL1725.tmp
ee838_video/hw3/: README.md
(+93 files in other folders)
